--- a/server/.env
+++ b/server/.env
@@ -3,7 +3,14 @@ MONGODB_URL = mongodb+srv://root:root@cluster0.hdpcx8g.mongodb.net/miscelanea?re
 CLOUD_API_KEY = YOUR_CLOUD_API_KEY
 CLOUD_API_SECRET = YOUR_CLOUD_API_SECRET
 CLOUD_NAME = YOUR_CLOUD_NAME
+JWT_SECRET = palabraSECRETA
 
+FRONTEND_URL=http://localhost:3000
+
+EMAIL_USER=0522691d0180aa
+EMAIL_PASS=f1d73c8b305daa
+EMAIL_HOST=smtp.mailtrap.io
+EMAIL_PORT=2525
 
 REFRESH_TOKEN_SECRET = YOUR_REFRESH_TOKEN_SECRET
 ACCESS_TOKEN_SECRET = YOUR_ACCESS_TOKEN_SECRET
